welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:1: error: Missing closing brace `}' assumed here
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
^